--- a/module/Application/view/application/index/index.phtml
+++ b/module/Application/view/application/index/index.phtml
@@ -31,7 +31,7 @@
             </div>
             <div class="col-md-3">
                 <?php
-                echo $escaper->escapeHtml($user->getLasttName());
+                echo $escaper->escapeHtml($user->getLastName());
                 ?>
             </div>
         <?php
